--- a/src/css/common.css
+++ b/src/css/common.css
@@ -16,3 +16,31 @@ img {
   display: block;
   max-width: 100%;
 }
+
+.timer {
+  display: flex;
+  margin: 10px 0;
+  align-items: center;
+  gap: 5px;
+}
+
+.field {
+  display: flex;
+  text-align: center;
+  flex-direction: column;
+  min-width: 3.5rem;
+}
+
+.value {
+  font-size: 2em;
+  font-weight: bold;
+  color: #1a1a1a; /* Kolor liczby */
+  background-color: #999;
+  border-radius: 5px;
+  
+}
+
+.label {
+  font-size: 0.8em;
+  color: #666; /* Kolor etykiety */
+}
